@@ -269,7 +269,6 @@ CONFIG_WIRELESS=y
 CONFIG_RTC=y
 CONFIG_RTC_HIRES=y
 CONFIG_RTC_FREQUENCY=16384
-CONFIG_SYSTEM_UTC=y
 
 #
 # OS support for events
